--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,3 +1,12 @@
 {
-  "Schedule": "Schedule"
+	"Schedule": "Schedule",
+
+	"Monday": "Monday",
+	"Tuesday": "Tuesday",
+	"Wednesday": "Wednesday",
+	"Thursday": "Thursday",
+	"Friday": "Friday",
+	"Saturday": "Saturday",
+
+	"More": "More"
 }
