--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,3 +1,12 @@
 {
-  "Schedule": "Расписание"
+  "Schedule": "Расписание",
+
+  "Monday": "Понедельник",
+  "Tuesday": "Вторник",
+  "Wednesday": "Среда",
+  "Thursday": "Четверг",
+  "Friday": "Пятница",
+  "Saturday": "Суббота",
+
+  "More": "Подробнее"
 }
