--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -8,5 +8,8 @@
 	"Friday": "Friday",
 	"Saturday": "Saturday",
 
-	"More": "More"
+	"More": "More",
+
+	"Week choise": "Week choise",
+	"Auth": "Authentication"
 }
