--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -8,5 +8,8 @@
   "Friday": "Пятница",
   "Saturday": "Суббота",
 
-  "More": "Подробнее"
+	"More": "Подробнее",
+
+	"Week choise": "Выбор недели",
+	"Auth": "Аутентификация"
 }
