--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -10,6 +10,21 @@
 
 	"More": "Подробнее",
 
+	"Teachers": "Преподаватели",
+
+	"Add teacher": "Добавить преподавателя",
+	"Сhange": "Изменить",
+	"Look": "Осмотреть",
+	"Action": "Действие",
+
+	"Id": "№",
+	"Name": "ФИО",
+	"Link": "Ссылка",
+
 	"Week choise": "Выбор недели",
-	"Auth": "Аутентификация"
+	"Auth": "Аутентификация",
+
+	"Name must be longer than 5 letters": "Имя должно быть длиннее 5 символов",
+
+	"Cancel": "Отмена"
 }
