--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -34,6 +34,10 @@
 	"You are welcome": "You are welcome",
 	"Adjust the settings to make your use of SCHEDO services even more convenient.": "Adjust the settings to make your use of SCHEDO services even more convenient.",
 	"Do you really want to leave?": "Do you really want to leave?",
+	"Something went wrong.": "Something went wrong.",
+	"Teacher updated": "Teacher updated",
+	"Length must be more than 5!": "Length must be more than 5!",
+	"Please input your note!": "Please input your note!",
 
 	"Cancel": "Cancel"
 }
