--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -34,6 +34,10 @@
 	"You are welcome": "Добро пожаловать",
 	"Adjust the settings to make your use of SCHEDO services even more convenient.": "Отрегулируйте настройки, чтобы вам было еще удобнее пользоваться услугами SCHEDO.",
 	"Do you really want to leave?": "Вы действительно хотите выйти?",
+	"Something went wrong.": "Что-то пошло не так.",
+	"Teacher updated": "Преподаватель успешно обновлен",
+	"Length must be more than 5!": "Длинна должна быть больше 5!",
+	"Please input your note!": "Введите значение!",
 
 	"Cancel": "Отмена"
 }
