--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,6 +12,10 @@
 	"Yes": "Да",
 	"No": "Нет",
 
+	"it041": "ит041",
+	"it042": "ит042",
+	"sp041": "сп041",
+
 	"Teachers": "Преподаватели",
 
 	"Add teacher": "Добавить преподавателя",
@@ -22,6 +26,8 @@
 	"Id": "№",
 	"Name": "ФИО",
 	"Link": "Ссылка",
+	"success": "Успешно",
+	"failed": "Ошибка",
 
 	"Week choise": "Выбор недели",
 	"Auth": "Аутентификация",
