--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -60,6 +60,11 @@
 	"type": "тип",
 	"weeks": "недели",
 
+	"profile": "профиль",
+	"link": "ссылка",
+	
+	"no info": "нет инфорамции",
+
 	"Name must be longer than 5 letters": "Имя должно быть длиннее 5 символов",
 	"Log into your profile for more options": "Войти в свой профиль для получения дополнительных возможностей",
 	"You are welcome": "Добро пожаловать",
