--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -63,6 +63,7 @@
 	"profile": "profile",
 	"link": "link",
 	"Back to Schedule": "Back to Schedule",
+	"Sorry, the group you visited does not exist.": "Sorry, the group you visited does not exist.",
 
 	"no info": "no info",
 
