--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -63,6 +63,7 @@
 	"profile": "профиль",
 	"link": "ссылка",
 	"Back to Schedule": "Вернуться к расписанию",
+	"Sorry, the group you visited does not exist.": "К сожалению, группы, которую Вы запрашиваете, не существует.",
 	
 	"no info": "нет инфорамции",
 
