remove clg and a little translation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -59,6 +59,9 @@
 	"room": "room",
 	"type": "type",
 	"weeks": "weeks",
+	"send": "send",
+	"half": "half",
+	"both": "both",
 
 	"profile": "profile",
 	"link": "link",
