--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -59,6 +59,9 @@
 	"room": "кабинет",
 	"type": "тип",
 	"weeks": "недели",
+	"send": "отправить",
+	"half": "половина",
+	"both": "обе",
 
 	"profile": "профиль",
 	"link": "ссылка",
