--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -12,11 +12,13 @@
 	"Yes": "Да",
 	"No": "Нет",
 
+	"group": "группа",
 	"it041": "ит041",
 	"it042": "ит042",
 	"sp041": "сп041",
 
 	"Teachers": "Преподаватели",
+	"Database": "база данных",
 
 	"Add teacher": "Добавить преподавателя",
 	"Сhange": "Изменить",
